
PIG-5269: MapReduceLauncher and MRJobStats imports org.python.google.common.collect.Lists instead of org.google.common.collect.Lists (nkollar via szita)

PIG-4700: Enable progress reporting for Tasks in Tez (satishsaley via rohini)

PIG-5251: Bump joda-time to 2.9.9 (dbist13 via rohini)
 
OPTIMIZATIONS
 
BUG FIXES

PIG-5310: MergeJoin throwing NullPointer Exception (satishsaley via rohini)

PIG-5314: Abort method is not implemented in PigProcessor (satishsaley via rohini)

PIG-5307: NPE in TezOperDependencyParallelismEstimator (rohini)

PIG-5272: BagToTuple output schema is incorrect (juen1jp via rohini)

PIG-5271: StackOverflowError when compiling in Tez mode (with union and replicated join) (knoguchi)

PIG-5299: PartitionFilterOptimizer failing at compile time (knoguchi)

PIG-5290: User Cache upload contention can cause job failures (xkrogen via rohini)

PIG-5293: Suspicious code as missing `this' for a member (lifove via daijy)

PIG-5294: Spark unit tests are always run in spark1 mode (szita)

PIG-5277: Spark mode is writing nulls among tuples to the output (workaround) (szita)

PIG-5283: Configuration is not passed to SparkPigSplits on the backend (szita)

PIG-5284: Fix flakyness introduced by PIG-3655 (szita)

PIG-5278: Unit test failures because of PIG-5264 (nkollar via rohini)

PIG-5276: building "jar" should not call "clean" (nkollar via szita)

PIG-5246: Modify bin/pig about SPARK_HOME, SPARK_ASSEMBLY_JAR after upgrading spark to 2 (liyunzhang)

PIG-3655: BinStorage and InterStorage approach to record markers is broken (szita)

PIG-5274: TestEvalPipelineLocal#testSetLocationCalledInFE is failing in spark mode after PIG-5157 (nkollar via szita)

PIG-4767: Partition filter not pushed down when filter clause references variable from another load path (knoguchi)

PIG-5270: Typo in Pig Logging (FromAlaska49 via daijy)

PIG-5263: Using wildcard doesn't work with OrcStorage (satishsaley via rohini)
